# sliding_tile_puzzle_solver

./: .babelrc  .gitignore  .travis.yml  1.bundle.js  CNAME  Cargo.toml  README.md  bundle.js  index.html  package-lock.json  package.json  server.js  webpack.config.js  webpack.dev.js  webpack.prod.js
public/: index.html
src/: App.js  TileBoard.css  index.js  root.css
src/components/: AlgorithmSelection.js  Hr.js  OptionHeading.js  OptionSection.js  RadioBlock.js  TextBasedInput.js  Tile.js  TileBoard.js  dropdown.js
src/tile_solver/: AStarSolver.js  AStarSolver.test.js  Board.js  Board.test.js  BoardNode.js  BoardNode.test.js  Tile.js  Tile.test.js
src/tile_solver/tests/: TestTile.js
src/tile_solver_rust/: Cargo.toml  board.rs  lib.rs  tile.rs
src/tile_solver_rust/src/: a_star_solver.rs  board.rs  main.rs  tile.rs
