[package]
name = "sliding_tile_puzzle_solver"
version = "0.0.1"
authors = ["KYDronePilot <33381603+KYDronePilot@users.noreply.github.com> (https://github.com/KYDronePilot)"]
description = "A library for solving the sliding tile puzzle. Designed for use with Web Assembly"

[lib]
crate-type = ["cdylib"]
path = "./src/tile_solver_rust/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
rand = "0.7.0"
lazy_static = "1.3.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
